--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -14,9 +14,10 @@ rust-version.workspace = true
 
 
 [features]
-default = ["mcu-esp32c3", "imu-stubbed", "log-rtt", "net-wifi"]
+# default = ["mcu-esp32c3", "imu-stubbed", "log-rtt", "net-wifi"]
 # default = ["mcu-nrf52840", "imu-stubbed", "log-usb-serial", "net-stubbed"]
 # default = ["mcu-esp32", "imu-stubbed", "log-uart", "net-wifi"]
+default = ["mcu-stm32f0", "imu-mpu6050", "log-rtt"]
 
 # Supported microcontrollers
 mcu-esp32 = [
@@ -48,6 +49,16 @@ mcu-nrf52840 = [
   "embassy-nrf/time-driver-rtc1",
   "embassy-executor/integrated-timers",
   "defmt-bbq",
+]
+mcu-stm32f0 = [
+  "dep:cortex-m",
+  "dep:cortex-m-rt",
+  "dep:alloc-cortex-m",
+  "dep:embassy-usb",
+  "embassy-stm32/stm32f072rb",
+  "embassy-stm32/time-driver-tim2",
+  "embassy-executor/integrated-timers",
+  # "defmt-bbq",
 ]
 
 # Wi-fi dependencies
@@ -95,6 +106,13 @@ cortex-m = { version = "0.7", optional = true, features = [
   "critical-section-single-core",
 ] }
 cortex-m-rt = { version = "0.7", optional = true }
+
+# mcu-stm32f0 stuff
+embassy-stm32 = { version = "*", optional = true, features = [
+  "nightly",
+  "defmt",
+  "time-driver-tim2"
+] }
 
 
 # Async stuff
@@ -186,6 +204,7 @@ defmt-rtt = { git = "https://github.com/TheButlah/defmt", rev = "b5d5e316ea56250
 embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "ebc7350" }
 embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "ebc7350" }
 embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "ebc7350" }
+embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "ebc7350" }
 embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "ebc7350" }
 embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "ebc7350" }
 
@@ -205,6 +224,10 @@ opt-level = 3
 [profile.dev.package.xtensa-lx-rt]
 opt-level = 'z'
 
+
+[profile.release]
+opt-level = 'z'
+strip = true
 
 ###################
 # Workspace stuff #
