--- a/firmware/Embed.toml
+++ b/firmware/Embed.toml
@@ -1,12 +1,13 @@
 ################
 # Default config
 [default.probe]
-protocol = "Jtag" # ESP32*
-# protocol = "Swd" # NRF52*
+# protocol = "Jtag" # ESP32*
+protocol = "Swd" # NRF52*
 
 [default.general]
-chip = "esp32c3"
+# chip = "esp32c3"
 # chip = "nrf52840"
+chip = "stm32f072rbtx"
 
 [default.rtt]
 enabled = true
