--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -67,4 +67,5 @@ rustflags = [
 
 
 [unstable]
-build-std = ["core", "alloc"]
+build-std = ["core", "alloc", "panic_abort"]
+build-std-features= ["panic_immediate_abort"]
